[package]
name = "eve_oauth2"
version = "0.1.0"
authors = ["Hyziri"]
edition = "2021"
description = "OAuth2 implementation for EVE Online SSO"
keywords = ["oauth2", "sso", "eve", "eveonline", "jwt"]
repository = "https://github.com/singularity-technologies/eve_oauth2"
license = "MIT"
readme = "README.md"
include = ["/src", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "9.2.0"
oauth2 = "4.4.1"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.171", features = ["derive"] }
