[package]
name = "eve_oauth2"
version = "0.1.0"
authors = ["Hyziri"]
edition = "2021"
description = "Black Rose's OAuth2 implementation for EVE Online SSO"
keywords = ["oauth2", "black_rose", "eve_sso", "eve_online", "eve_esi"]
repository = "https://github.com/blackrose-eve/eve_oauth2"
license = "MIT"
readme = "README.md"
include = ["/src", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = { version = "0.49.2", features = ["async"] }
jsonwebtoken = "9.2.0"
oauth2 = "4.4.1"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.171", features = ["derive"] }

[dev-dependencies]
axum = "0.7.5"
dotenv = "0.15.0"
serde = { version = "1.0.171", features = ["derive"] }
time = "0.3.34"
tokio = "1.36.0"
tower-sessions = "0.12.0"
